--- a/init/docker-btcd.service
+++ b/init/docker-btcd.service
@@ -1,6 +1,6 @@
 [Unit]
-Description=Bitcoind Docker Container
-Documentation=https://github.com/kylemanna/docker-bitcoind
+Description=btcd Docker Container
+Documentation=https://github.com/LN-Zap/docker-btcd
 After=network.target docker.socket
 Requires=docker.socket
 
@@ -9,13 +9,13 @@ RestartSec=10
 Restart=always
 
 # Modify IP6_PREFIX to match network config
-Environment="NAME=bitcoind"
-Environment="DATA_VOL=bitcoind-data"
-Environment="IMG=kylemanna/bitcoind:dev"
+Environment="NAME=btcd"
+Environment="DATA_VOL=btcd-data"
+Environment="IMG=lnzap/btcd:dev"
 Environment="PORT=8333:8333/tcp"
 
 # To override environment variables, use local configuration directory:
-# /etc/systemd/system/docker-bitcoind.service/local.conf
+# /etc/systemd/system/docker-btcd.service/local.conf
 # http://www.freedesktop.org/software/systemd/man/systemd.unit.html
 
 # Clean-up bad state if still hanging around
@@ -25,7 +25,7 @@ ExecStartPre=-/usr/bin/docker rm -f $NAME
 ExecStartPre=-/usr/bin/docker pull $IMG
 
 # Main process
-ExecStart=/usr/bin/docker run --rm -v ${DATA_VOL}:/bitcoin --name ${NAME} -p ${PORT} ${IMG} btc_oneshot $ARGS
+ExecStart=/usr/bin/docker run --rm -v ${DATA_VOL}:/btcd --name ${NAME} -p ${PORT} ${IMG} btc_oneshot $ARGS
 
 [Install]
 WantedBy=multi-user.target
