Support haproxy LB

--- a/btc.yml
+++ b/btc.yml
@@ -35,6 +35,9 @@ services:
       - traefik.http.routers.btc.entrypoints=websecure
       - traefik.http.routers.btc.rule=Host(`${BTC_HOST}.${DOMAIN}`)
       - traefik.http.routers.btc.service=btc
+      - traefik.http.routers.btclb.entrypoints=websecure
+      - traefik.http.routers.btclb.rule=Host(`${BTC_LB}.${DOMAIN}`)
+      - traefik.http.routers.btclb.service=btc
       - traefik.http.services.btc.loadbalancer.server.port=8332
 
 volumes:
