--- a/default.env
+++ b/default.env
@@ -15,6 +15,7 @@ CF_API_TOKEN=SECRETTOKEN
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
 BTC_HOST=btc
+BTC_LB=btc-lb
 DDNS_SUBDOMAIN=
 DDNS_PROXY=false
 
