--- a/.github/workflows/trivy-analysis.yml
+++ b/.github/workflows/trivy-analysis.yml
@@ -25,12 +25,12 @@ jobs:
         with:
           push: false
           load: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/sparrow-server:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/bitcoind:latest
       - 
         name: Run Trivy vulnerability scanner against "latest" image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '${{ secrets.DOCKER_USERNAME }}/sparrow-server:latest'
+          image-ref: '${{ secrets.DOCKER_USERNAME }}/bitcoind:latest'
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
