--- a/.github/workflows/build-image-on-push.yml
+++ b/.github/workflows/build-image-on-push.yml
@@ -38,6 +38,13 @@ jobs:
           tags: bitcoind:ubuntu-test
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/bitcoind:latest
       - 
+        name: Test-run x86_64 image
+        run: |
+          docker run --rm sbitcoind:ubuntu-test &
+          PID=$!
+          sleep 60
+          kill -SIGINT $PID # this will return a non-zero exit code if the container dies early on
+      - 
         name: Build ARMv8 image
         id: docker_build_arm64
         uses: docker/build-push-action@v3.2.0
