--- a/.github/workflows/build-image-on-push.yml
+++ b/.github/workflows/build-image-on-push.yml
@@ -40,7 +40,7 @@ jobs:
       - 
         name: Test-run x86_64 image
         run: |
-          docker run --rm sbitcoind:ubuntu-test &
+          docker run --rm bitcoind:ubuntu-test &
           PID=$!
           sleep 60
           kill -SIGINT $PID # this will return a non-zero exit code if the container dies early on
