--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - image="bitcoind:$VARIANT"
 
 script:
-  - docker build -t "$image" .
+  - docker buildx build --platform linux/arm64,linux/amd64,linux/riscv64 -t "$image" .
   - official-images/test/run.sh "$image"
   - test/run.sh "$image"
 
