--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -3,7 +3,7 @@ name: Build and push Docker image
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   AWS_DEFAULT_REGION: us-west-1
