--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -8,7 +8,7 @@ on:
 env:
   AWS_DEFAULT_REGION: us-west-1
   AWS_ACCOUNT_ID: 144594246572
-  IMAGE_NAME: bitcoind
+  IMAGE_NAME: ordinex/bitcoind
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
