Update ecr target

--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -6,10 +6,10 @@ on:
       - master
 
 env:
-  AWS_DEFAULT_REGION: us-west-1
+  AWS_DEFAULT_REGION: eu-central-1
   AWS_ACCOUNT_ID: 144594246572
   IMAGE_NAME: ordinex/bitcoind
-  IMAGE_TAG: ${{ github.sha }}
+  IMAGE_TAG: ${{ github.run_number }}
 
 jobs:
   build-and-push:
