Add a btcd wrapper script

--- a/btc.yml
+++ b/btc.yml
@@ -8,7 +8,7 @@ x-logging: &logging
 
 services:
   bitcoind:
-    restart: "${RESTART}"
+    restart: unless-stopped
     build:
       context: ./
       dockerfile: Dockerfile
