--- a/default.env
+++ b/default.env
@@ -1,25 +1,25 @@
 # docker-compose files to use
 COMPOSE_FILE=btc.yml
 # Version and Bitcoin core signature to pull
-BTCD_VERSION=24.1
+BTCD_VERSION=25.1
 GPG_SIGNATURE=152812300785C96444D3334D17565732E08E5E41
 # For RPC access, user and password
 RPC_USER=
 RPC_PW=
 
-# Secure web proxy - advanced use, please see instructions
+# Secure web proxy - advanced use, please see https://ethdocker.com/Usage/ReverseProxy
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
-CF_EMAIL=user@example.com
-CF_API_TOKEN=SECRETTOKEN
+CF_DNS_API_TOKEN=SECRETTOKEN
+CF_ZONE_API_TOKEN=
 AWS_PROFILE=myprofile
 AWS_HOSTED_ZONE_ID=myzoneid
 BTC_HOST=btc
 BTC_LB=btc-lb
-DDNS_SUBDOMAIN=
+DDNS_SUBDOMAIN=btc
 DDNS_PROXY=false
 
-RESTART=unless-stopped
+LOG_LEVEL=info
 
 # Secure web proxy port, 443 and 80 are great defaults
 TRAEFIK_WEB_PORT=443
