--- a/traefik-aws.yml
+++ b/traefik-aws.yml
@@ -4,10 +4,14 @@ services:
     image: traefik-aws
     build:
       context: ./traefik
-    restart: ${RESTART}
+    restart: unless-stopped
     command:
-#      - --log.level=DEBUG
+#      - --accesslog=true
+#      - --accesslog.format=json
+#      - --accesslog.fields.defaultmode=keep
+#      - --accesslog.fields.headers.defaultmode=keep
 #      - --certificatesResolvers.letsencrypt.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
+      - --log.level=${LOG_LEVEL:-info}
       - --providers.docker=true
       - --providers.docker.exposedbydefault=false
       - --certificatesresolvers.letsencrypt.acme.dnschallenge=true
