--- a/default.env
+++ b/default.env
@@ -24,3 +24,6 @@ LOG_LEVEL=info
 # Secure web proxy port, 443 and 80 are great defaults
 TRAEFIK_WEB_PORT=443
 TRAEFIK_WEB_HTTP_PORT=80
+
+# Used by btcd update - please do not adjust
+ENV_VERSION=1
