Include more platforms

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,5 +26,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/armhf, linux/arm
           tags: lcd1232/bitcoind:latest
