--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,8 @@ jobs:
         id: extract_version
         run: |
           VERSION=$(grep -oP '(?<=ARG VERSION=).*' Dockerfile)
+          # Remove trailing whitespace or newline characters
+          VERSION=$(echo $VERSION | tr -d '\r\n')
           echo "docker_tag=$VERSION" >> $GITHUB_ENV
 
       -
