added prune node options

--- a/btc.yml
+++ b/btc.yml
@@ -21,7 +21,7 @@ services:
     environment:
         - DISABLEWALLET=1
         - PRINTTOCONSOLE=1
-        - TXINDEX=1
+        - TXINDEX=${TXINDEX:-1}
         - RPCUSER=${RPC_USER}
         - RPCPASSWORD=${RPC_PW}
     stop_grace_period: 1m
@@ -36,7 +36,6 @@ services:
     <<: *logging
     entrypoint:
       - docker-entrypoint.sh
-    command:
       - btc_oneshot
       - -rpcbind=:8332
       - -rpcallowip=0.0.0.0/0
