--- a/default.env
+++ b/default.env
@@ -7,6 +7,10 @@ GPG_SIGNATURE=152812300785C96444D3334D17565732E08E5E41
 RPC_USER=
 RPC_PW=
 
+# Set to 0 to use pruned mode
+TXINDEX=1
+EXTRA_BITCOIND_FLAG=
+
 # Secure web proxy - advanced use, please see https://ethdocker.com/Usage/ReverseProxy
 DOMAIN=example.com
 ACME_EMAIL=user@example.com
